Method to determine where children are based on parents. This version has no runtime errors.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <script src="script.js"></script>
+    <script src="disk.js"></script>
+    <script src="stackingCone.js"></script>
   </body>
 </html>
