Buttons in proper locations

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <input type="range" min="15" max = "180" value="50" class="slider" id="angleSlider">
     </div>
           
-    <button id="resetButton">Restart with settings</button>
+    <button class = "center" id="resetButton">Restart with settings</button>
     
-    <div class="diskJS" id="diskStackingCanvas">
+    <div class="diskJS center" id="diskStackingCanvas">
       <script src="script.js"></script>
       <script src="disk.js"></script>
       <script src="stackingCone.js"></script>
