Basic graph works

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           
     <button class = "center" id="resetButton">Restart with settings</button>
     
-    <div class="diskJS center" id="diskStackingCanvas"></div>
+    <div class="center" id="diskStackingCanvas"></div>
 
     <div class="parastichyNumbers">
       <p id="parastichyNumbersText"></p>
     </div>
 
-    <div id="graphCanvas"></div>
+    <div class="center" id="graphCanvas"></div>
 
 
     <script src="script.js"></script>
