Cleaned up chart (formatted points and labels). Fixed bug that caused the iteration number to increase too much.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
       <p id="parastichyNumbersText"></p>
     </div>
 
-    <canvas id="parastichyGraph"></canvas>
-
-    <!--div class="center" id="graphCanvas"></div-->
+    <canvas class="center" id="parastichyGraph"></canvas>
 
     <script src="script.js"></script>
     <script src="disk.js"></script>
     <script src="stackingCone.js"></script>
-    <!--<script src="parastichyGraph.js">--></script>
     
     <script>
       document.getElementById("resetButton").onclick = function(){restart()};
